# ChangeLog for net-im/qtwitter
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jun 2009; Dominik Kapusta <d@ayoy.net> qtwitter-9999.ebuild,
  metadata.xml:
  Added oauth USE flag, changed LICENSE and updated DESCRIPTION. Maintainer
  changed to Dominik Kapusta <d@ayoy.net>.

  09 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qtwitter-9999.ebuild:
  Sync with portage package

  30 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  -qtwitter-0.6.0-r1.ebuild:
  On tree now

*qtwitter-0.6.0-r1 (29 Apr 2009)

  29 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  +qtwitter-0.6.0-r1.ebuild, -qtwitter-0.6.0.ebuild:
  Fixing SRC_URI,LICENSE. Dropping broken ebuild

*qtwitter-0.6.0 (28 Apr 2009)

  28 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -qtwitter-0.5.0.ebuild, +qtwitter-0.6.0.ebuild:
  updated to 0.6.0

*qtwitter-0.5.0 (11 Mar 2009)

  11 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -qtwitter-0.4.2.ebuild, +qtwitter-0.5.0.ebuild:
  version bump

*qtwitter-0.4.2 (05 Mar 2009)

  05 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -qtwitter-0.4.1.ebuild, +qtwitter-0.4.2.ebuild:
  version bump, removed old version :)

*qtwitter-0.4.1 (03 Mar 2009)

  03 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +qtwitter-0.4.1.ebuild, -qtwitter-0.4.ebuild:
  version bump, removed old version

*qtwitter-0.4 (27 Feb 2009)

  27 Feb 2009; Markos Chandras <hwoarang@gentoo.org> -qtwitter-0.3.1.ebuild,
  +qtwitter-0.4.ebuild:
  Version bump, remove old

*qtwitter-0.3.1 (21 Feb 2009)

  21 Feb 2009; Markos Chandras <hwoarang@gentoo.org> +qtwitter-0.3.1.ebuild,
  -qtwitter-0.3.ebuild:
  version bump, remove old

*qtwitter-0.3 (20 Feb 2009)

  20 Feb 2009; Markos Chandras <hwoarang@gentoo.org> -qtwitter-0.2.1.ebuild,
  +qtwitter-0.3.ebuild:
  Version bump

*qtwitter-9999 (17 Feb 2009)
*qtwitter-0.2.1 (17 Feb 2009)
