@@ -1,3 +1,5 @@
-EBUILD qtwitter-9999.ebuild 1642 RMD160 df214af89743aa47e8b3018b0e04c42ed7f392c9 SHA1 ae1e1593604c9c26eed2e41a3ceea90f853fe843 SHA256 15a5e53e8c393cf82cc770e3cc4a513137f56710a6290b62bdb0181ba24b286f
-MISC ChangeLog 2125 RMD160 fee587221ac590fc5ebe34d526abffed5cd5ae14 SHA1 3bc899eb3a1706d06c3a2129553774ec73f4ee37 SHA256 0e41a0c1f072730d0fc96e8b174586081b7f09d1db34881370bcc2ae385bdce6
+DIST qtwitter-0.8.0-src.tar.gz 716063 RMD160 ecdc6d44837db5446c485f247278eb977f4bd301 SHA1 0caf5a80a9f91166163084377c45610b981d983f SHA256 8be429169abffe5ac07df2a4ba7ceaee6ce9478475de0d7a47c40db1904cfa16
+EBUILD qtwitter-0.8.0.ebuild 1661 RMD160 978a5c0da1d469fda79e8a02b7a37689b1a955e7 SHA1 557846778b1a9b6878eb7043811dc10a7941b105 SHA256 8feb2069fe0246797e14f9e3c4c11c2ba9a934390fd1cd4a890c15c7d0692b32
+EBUILD qtwitter-9999.ebuild 1652 RMD160 f6804a8d674bae0a3a5a70ca494bff5ac55a712e SHA1 331daac04beee9dcc6059a5a87d11d59eb82adc2 SHA256 f34c18b41b7147a0c56bb9c068bf2e43f3310b69ec99a8c0dc80763ee4d04924
+MISC ChangeLog 2309 RMD160 ce6f0a643e5670e3396f381db8b1a270fbb4d20b SHA1 6a9fc6b4c9f932e04938c8c7e2c24d8df1c95636 SHA256 0b7801cf2ed9f2171b4d624ea856c65cd294a22f3c7e5b14ef9e08c0bad80ebd
 MISC metadata.xml 380 RMD160 e11d6dc2585d571ec9d9ddccc1d581a3b7cafedf SHA1 f0963ee391975a19e9b70670bda55946c4789cc0 SHA256 b54d5ce923bbb84db04164aeb2824b7edd7e1d0c8f1a9d961188f3427a727310
