@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qtwitter-0.8.0 (13 Jul 2009)
+
+  13 Jul 2009; Dominik Kapusta <d@ayoy.net> +qtwitter-0.8.0.ebuild,
+  qtwitter-9999.ebuild:
+  Version bump, with optional dependency on dev-libs/qoauth
+
   25 Jun 2009; Dominik Kapusta <d@ayoy.net> qtwitter-9999.ebuild,
   metadata.xml:
   Added oauth USE flag, changed LICENSE and updated DESCRIPTION. Maintainer
